Move gitignore and add tailwindcss
Using npm now to set up tailwind too. There's also a new makefile command for running tailwind

--- a/recreate-datapoint/static/index.html
+++ b/recreate-datapoint/static/index.html
@@ -3,9 +3,10 @@
 <head>
     <title>index</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <link href="./static/output.css" rel="stylesheet">
 </head>
 <body>
-    <h1 id="test">Hello World!</h1>
+    <h1 id="test" class="text-5xl w-full text-center font-semibold py-5">Hello World!</h1>
     <script src="static/index.js"></script>
 </body>
 </html>
