Add better UX experience on frontend

--- a/recreate-datapoint/static/index.html
+++ b/recreate-datapoint/static/index.html
@@ -6,7 +6,10 @@
     <link href="./static/output.css" rel="stylesheet">
 </head>
 <body>
-    <h1 id="test" class="text-5xl w-full text-center font-semibold py-5">Hello World!</h1>
+    <h1 id="test" class="text-3xl w-full text-center font-semibold py-2">quickdraw vs</h1>
+    <div class="w-full grid place-items-center mb-6">
+        <div class="rounded-xl overflow-hidden w-[90vw] shadow-xl grid place-items-center" id="canvasdiv"></div>
+    </div>
     <script src="static/index.js"></script>
 </body>
 </html>
