--- a/client/static/index.html
+++ b/client/static/index.html
@@ -8,9 +8,16 @@
 </head>
 <body>
     <h1 id="test" class="text-3xl w-full text-center font-semibold py-2">quickdraw vs</h1>
-    <button class="place-items-center bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" id="newgame">
-        New game
-    </button>
+
+    <form novalidate="novalidate" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" id="gameForm">
+        <label for="game_id">Game ID:</label>
+        <input type="text" id="game_id" name="game_id" required>
+        <br>
+        <label for="player_name">Player Name:</label>
+        <input type="text" id="player_name" name="player_name" required>
+        <br>
+        <button type="submit">Create Game</button>
+    </form>
     <div class="w-full grid place-items-center mb-6">
         <div class="outline outline-2 outline-offset-2 outline-blue-500 rounded-xl overflow-hidden w-[90vw] shadow-xl grid place-items-center" id="canvasdiv"></div>
     </div>
